--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,22 +4,28 @@ version = "0.1.0"
 description = ""
 authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.9"
-datasets = { extras = ["vision"], version = "^2.16.1" }
-pycocotools = "^2.0.7"
+datasets = { extras = ["vision"], version = ">=1.0.0" }
+huggingface-datasets-cocoapi-tools = { extras = [
+    "cocoapi",
+], version = ">=0.3.0" }
 torch = ">=1.0.0"
 
 [tool.poetry.group.dev.dependencies]
-ruff = "^0.1.11"
-black = "^23.12.1"
-isort = "^5.13.2"
-mypy = "^1.8.0"
-pytest = "^7.4.4"
+ruff = ">=0.1.5"
+mypy = ">=1.0.0"
+pytest = ">=6.0.0"
+
 types-pillow = "^10.1.0.20240106"
 types-pycocotools = "^2.0.0.20240106"
 types-tqdm = "^4.66.0.20240106"
+
+[tool.mypy]
+python_version = "3.9"
+ignore_missing_imports = true
 
 [build-system]
 requires = ["poetry-core"]
